# LearningOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: camera.h  depth_testing.cpp  getting_started.cpp  main.cpp  mesh.h  model.h  multiple_lights.cpp  shader.cpp  shader.h  stencil_buffer.cpp
src/shaders/: 1_vertex.shader  2_ambient.shader  2_lighting.shader  2_vertex.shader  depth_view_frag.shader  lighting_maps.shader
